# AIECS

./: .gitignore  AIECS.slnx  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_SUMMARY.md  CLEANUP_COMPLETE.md  CMakeLists.txt  COLLISION_SOA.md  HYBRID_ARCHITECTURE.md  HYBRID_QUICK_START.md  INDEX.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_CN.md  TRANSFORM_OPTIMIZATION.md  vcpkg-configuration.json  vcpkg.json
include/: CollisionComponent.h  CollisionComponentFB.h  CollisionDataStorage.h  CollisionStorage.h  ComponentTypes.h  Entity.h  EntityComponent.h  EntityContext.h  EntityManager.h  EntitySystem.h  EventSystem.h  GameEntity.h  InputComponent.h  InputSystem.h  InstanceVBO.h  Material.h  MobilitySwitcherComponent.h  MobilitySwitcherSystem.h  Module.h  Object.h  OpenGLRenderer.h  RenderCollector.h  RenderComponent.h  RenderComponentFB.h  RenderStorage.h  RenderSystem.h  SSBOBuffer.h  ShaderProgram.h  Transform.h  TransformComponent.h  TransformComponentFB.h  TransformComputeSystem.h  TransformDataStorage.h  TransformStorage.h  VAO.h  VBO.h  World.h
src/: CollisionComponent.cpp  CollisionComponentFB.cpp  EntitySystem.cpp  EventSystem.cpp  GameEntity.cpp  InputComponent.cpp  InputSystem.cpp  MobilitySwitcherComponent.cpp  MobilitySwitcherSystem.cpp  Module.cpp  Object.cpp  OpenGLRenderer.cpp  RenderCollector.cpp  RenderComponent.cpp  RenderComponentFB.cpp  RenderSystem.cpp  ShaderProgram.cpp  TransformComponent.cpp  TransformComponentFB.cpp  TransformComputeSystem.cpp  VAO.cpp  World.cpp  main.cpp  main_frostbite.cpp  main_hybrid.cpp
